syntax = "proto3";

message DeleteVolumeRequest {
  string id = 1;
  string host = 2;
}
